syntax = "proto2";

option java_package = "com.whichclasses.model";
option java_multiple_files = true;

package com.whichclasses.model;

message TceClassModel {
  optional string course_id = 1;
  optional int32 term_code = 2;
  optional string title = 3;
}
